deleted unnecessary classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="android.example.beverageshop">
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BeverageShop">
+        <activity
+            android:exported="false"
+            android:name=".MainViewModel"/>
         <activity
             android:exported="false"
             android:name=".OrderActivity"/>
